@@ -121,7 +121,7 @@ public class CookieStoreImpl extends AbstractCookieStore {
         return state.attributes.get(attrName);
     }
 
-    public void invaldiate(String sessionID, StoreContext storeContext) {
+    public void invalidate(String sessionID, StoreContext storeContext) {
         State state = getState(storeContext);
 
         if (!isSurvivesInInvalidating()) {
